--- a/WebContent/WEB-INF/view/entradaSalida.html
+++ b/WebContent/WEB-INF/view/entradaSalida.html
@@ -1,7 +1,4 @@
-<%@ page language="java" contentType="text/html; charset=ISO-8859-1"
-    pageEncoding="ISO-8859-1"%>
-    <%@ taglib uri="http://java.sun.com/jsp/jstl/core" prefix="c" %>
-    <%@ taglib prefix="form" uri="http://www.springframework.org/tags/form" %>   
+
 <!DOCTYPE html>
 <html >
 <head >
@@ -9,9 +6,8 @@
 <title>Entrada Salida</title>
 
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-<link rel="stylesheet" type="text/css"  href="${pageContext.request.contextPath}/resources/css/mycss.css">	
+<link rel="stylesheet" type="text/css"  href="/WebContent/resources/css/mycss.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-
 </head>
 <body >
 
@@ -22,17 +18,16 @@
 	</div>
 
 	<div class="row p-4" style="background-color: transparent;">
-		<button class="atras btn btn-sm"><a href="${pageContext.request.contextPath}/nuevoMovimiento" id="estado">Atras</a></button>
+		<button class="atras btn btn-sm"><a href="${pageContext.request.contextPath}/search" id="estado">Atras</a></button>
 	</div>
 
 	
 	<div class="filtro">
-		<span>Generar Movimiento:  ${userSelected.nombre} ${userSelected.apellido}</span> 
+		<span>Generar Movimiento</span> 
 	</div>
 	<div class="filtroCuerpo mb-4">
-		<form:form action="guardarMovimiento" >		  
+		<form:form action="guardarMovimiento" style="width:60%" >		  
 			<div class="form-group">
-			<span>Seleccionar movimiento</span>
 				 <select name="item" class="form-select form-select-sm form-select-innova">		    		
 							   <c:if test="${(empty ingresoPersona.fechaIn) and (not empty ingresoPersona.fechaFin)}">
 								   <option value="ingreso" >Ingreso a Base</option>
@@ -49,15 +44,14 @@
 								   <option value="egreso" >Salida de Base</option>
 							   </c:if>	   
 			 </select>
-			
+			</div>
 			<br><br>
-			
+			<div class="form-group">
 				<span>Detalles del movimiento</span><br> 
 				<input type="text" name="detalle" id="detalles" placeholder="Ingrese detalles del movimiento">
-			   
 			   <input style="display:none" type="text" name="id" value="${userSelected.id}">							
 			   
-			   <button type="submit" class="submit btn btn-sm">Enviar</button>	
+			   <button type="submit" class="submit btn btn-sm">Buscar</button>
 			</div>
 		 
 		   
@@ -66,7 +60,7 @@
 	</div>
 
 	<div class="filtro">
-		<span>Último movimiento realizado</span> 
+		<span>Ãšltimo movimiento realizado</span> 
 	</div>
 	<div class="filtroCuerpo">
 		<table class="table table-hover">
@@ -83,10 +77,10 @@
 								<span>${userSelected.nombre} ${userSelected.apellido} ${userSelected.id}</span>
 							</td>
 							<td>
-								${ingresoPersona.fechaIn}							
+								<span>${ingresoPersona.fechaIn}</span>
 							</td>						 						
 							<td>
-									${ingresoPersona.fechaFin}						
+								<span>${ingresoPersona.fechaFin}</span>
 							</td>
 						</tr>			
 			</tbody>
