--- a/WebContent/WEB-INF/view/estadoSearch.html
+++ b/WebContent/WEB-INF/view/estadoSearch.html
@@ -1,7 +1,3 @@
-<%@ page language="java" contentType="text/html; charset=ISO-8859-1"
-    pageEncoding="ISO-8859-1"%>
-<%@ taglib uri="http://java.sun.com/jsp/jstl/core" prefix="c" %>    
-    <%@ taglib prefix="form" uri="http://www.springframework.org/tags/form" %>   
 <!DOCTYPE html>
 <html>
 <head>
@@ -11,7 +7,7 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>	
 <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 
-<link rel="stylesheet" type="text/css"  href="${pageContext.request.contextPath}/resources/css/mycss.css">
+<link rel="stylesheet" type="text/css"  href="/WebContent/resources/css/mycss.css">
 <title>Innova</title>
 </head>
 <body>
@@ -24,7 +20,7 @@
 </div>
 
 <div class="row p-4" style="background-color: transparent;">
-	<a class="atras" href="${pageContext.request.contextPath}/search" id="estado"><button class="atras btn btn-sm">Atras</button></a>
+	<button class="atras btn btn-sm">Atras</button>
 </div>
 
 <div class="filtro">
