--- a/WebContent/resources/css/mycss.css
+++ b/WebContent/resources/css/mycss.css
@@ -61,7 +61,8 @@ input{
     border-style: solid;
     border-width: 1px;
     height: 25px;
-    color: white;    
+    color: white;
+    width: 90%;    
 }
 
 ::placeholder{
@@ -72,10 +73,31 @@ input{
 .submit{
     background-color: #006BBD;
     color: white;
-    width: 90px;
-    height: 30px; 
-    float: right;    
+    width:auto;
+    height: 40px; 
+    float: right;
+    margin-top: 10px;
 }
+
+.submitNuevo{
+    background-color: #46BA46;
+    color: white;
+    width:auto;
+    height: 40px; 
+    float: right;
+    margin-top: 10px;    
+}
+
+.submit-atras{
+    background-color: #3BB4D8;
+    color: white;
+    width:auto;
+    height: 40px; 
+    float: left;
+    margin-top: 10px;
+}
+
+
 
 .atras{
     background-color: #006BBD;
@@ -89,15 +111,25 @@ input{
     background-color: #46BA46;
     color: white;
     width: 90px;
-    height: 30px; 
-    
-    
+    height: 40px;
     float: right;    
     margin: auto;
+    line-height: 40px;
 }
 
 .table{
-    color: #DCDCDD;    
+    color: #DCDCDD; 
+    border-collapse:collapse; 
+    border-spacing:0;
+    border: 0px transparent;
+}
+
+.table tbody tr:hover{
+   color:white;
+}
+
+.table tr td{
+    border: 0px transparent;
 }
 
 
@@ -115,3 +147,51 @@ input{
 #detalles{
     width: 100%;
 }
+
+.botonAccion{
+    background-color: #5BBFDD;            
+    border-radius: 8px;
+    width:35px;
+    height:35px;
+    text-align:center;
+    border-width: 0;
+}
+
+.botonAccion span{
+    color: white;    
+ 	vertical-align:middle;
+ 	text-align:center;
+     
+}
+
+#btnIngreso{
+    background-color: #00d900;
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    border-style: none;
+}
+
+#btnSalida{
+    background-color: #d60000;
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    border-style: none;
+}
+
+select.minimal {
+    background-image:
+      linear-gradient(45deg, transparent 50%, rgb(255, 255, 255) 50%),
+      linear-gradient(135deg, rgb(255, 255, 255) 50%, transparent 50%),
+      linear-gradient(to right, #ccc, #ccc);
+    background-position:
+      calc(100% - 20px) calc(1em + 2px),
+      calc(100% - 15px) calc(1em + 2px),
+      calc(100% - 2.5em) 0.5em;
+    background-size:
+      5px 5px,
+      5px 5px,
+      1px 1.5em;
+    background-repeat: no-repeat;
+  }
